@@ -2,7 +2,7 @@
 - créer une struct module dans src/module.c
 - ajouter dans cette struct la fonction de uninstall
 
-- ajouter src/dir.c pour appliquer une fonction sur tous les fichiers d'un directory
+- ajouter src/dir.c pour appliquer une fonction sur tous les fichiers d'un directory [OK]
 
 - ajouter le chargement de modules pour tous les .so d'un directory (voir libmagic pour filtrer les fichiers autres que .so)
 
