@@ -1,4 +1,2 @@
 pkginclude_HEADERS= \
-module.h \
-scan.h \
 umwsu.h
