@@ -1,0 +1,6 @@
+#ifndef _LIBUMWSU_MODULE_H_
+#define _LIBUMWSU_MODULE_H_
+
+int module_install(const char *path);
+
+#endif
