@@ -1,0 +1,6 @@
+#include <libumwsu/umwsu.h>
+
+int main(int argc, char **argv)
+{
+  umw_open();
+}
